--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,19 @@ header {
     height: 80px;
 }
 
-.jumbotron {
+#jumbotron {
     width: 100%;
     height: 500px;
+}
+
+#about, #jumbotron {
     background-color: rgb(71, 117, 71);
 }
 
+footer {
+    width: 100%;
+    height: 400px;
+}
 .col {
     background-color: rebeccapurple;
 }
