--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,66 @@ header {
 #about, #jumbotron {
     background-color: rgb(71, 117, 71);
 }
+.col {
+    background-color: rebeccapurple;
+}
+
+/* Stili della sezione Portfolio  */
+
+.card, .card img {
+    border-radius: 15px;
+}
+
+
+[class^="col"] img {
+    max-width: 100%;
+}
+
+/* Stili sezione About  */
+
+.line {
+    flex-basis: 10%;
+    height: 2px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: white;
+}
+
+/* Stili del Footer  */
 
 footer {
     width: 100%;
     height: 400px;
 }
-.col {
-    background-color: rebeccapurple;
+.ft-top {
+    background-color: rgb(52, 52, 110);
+    height: 300px;
 }
 
-[class^="col"] img {
-    max-width: 100%;
+.ft-bottom {
+    background-color: rgb(33, 33, 80);
+    height: 100px;
+}
+
+
+
+.row .text-white .text-center {
+    height: 100%;
+}
+
+#row-ft-btm {
+    height: 100px;
+}
+
+#row-ft-top {
+    height: 300px;
+}
+
+.secondary-txt {
+    font-size: 14px;
+}
+
+.social i {
+    padding-left: 10px;
+    font-size: 18px;
 }
